[package]
name = "env_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.34.2"
ureq = "3.3.0"
serde = { version = "1.0.228", features = ["derive"] }
zip = "8.6.0"
serde_json = { version = "1.0.149", default-features = false, features = ["std"] }
tar = "0.4.45"
flate2 = { version = "1.1.9", default-features = false, features = ["rust_backend"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"